ChangeLog
---------

* MyProxy support in proxymanager. Allows retrieval of base proxy from MyProxy using passphrase, or using another proxymanager profile proxy for auth.

* fixed bug in Scale sched plugin returning 0 when n*factor < 1. 

* minimum Condor version check. Allows particular plugins to specify minimum. Failure aborts. 

* multiproxy functionality. Allow multiple proxy profiles. proxymanager tries all until one is found. failure generates email.  

* scripts and config files added for logs monitor apf-search-failed

* strip() after split by comma in configloader, to allow things like 'x = foo, bar' with whitespace after comma

* bug in MaxPending sched plugin logic fixed. Now no limit imposed when there are no pending pilots.

* queues configuration files can be read from a directory (i.e. /etc/apf/queues.d/). configloader adapted to accept directories instead of list of URIs

* method name removed from log messages.

* fixed bug in some sched plugins, mixing None and 0 in the logic

* add documentation to install.html (in verbatim, no html format)

* removed all methods for FactoryCLI from bin/factory, and mainLoop() renamed to run()

* added new custom logging level -TRACE- and using it for some long messages, like the output of condor_q in XML format

* configloader converts None in conf to Python None object. Change in default_value logic--if no default_value is provided
  then generic_get returns None. 

* info major refactoring of Info class hierarchy. most objects now have overridden methods to avoid exception generation. 

* passing queryargs from queues.conf to query.querycondor() call at Condor batchstatus plugin.

* siteid removed from several places and replaced by wmsqueue.

* generic_get() simplified

* InfoContainer removed. 

* fake info classes imports removed, and importing from the right place (info.py instead of factory.py)

* log messages in sched plugins more homogeneous. Now all of them are "Return=123".
