@@ -22,6 +22,7 @@ from autopyfactory.info import WMSStatusInfo
 from autopyfactory.info import SiteInfo
 from autopyfactory.info import CloudInfo
 import autopyfactory.utils as utils
+
 import userinterface.Client as Client
 
 
